fix: 100vh on mobile

--- a/src/layouts/main/styles.module.css
+++ b/src/layouts/main/styles.module.css
@@ -1,7 +1,3 @@
-.content {
-  min-height: calc(100vh - theme('height.16'));
-}
-
 .blur {
   backdrop-filter: blur(4px);
   background-color: rgba(255, 255, 255, 0.2);
